<resources>

    <string name="address_browse_delete">删除</string>
    <string name="address_browse_update">编辑</string>
    <string name="address_browse_title_add">添加</string>
    <string name="address_browse_title_text">地址管理</string>
    <string name="my_coupon_title">优惠券</string>
    <string name="my_coupon_item_name">名称：</string>
    <string name="order_nonePayed_title_text">未付款订单</string>
    <string name="order_nonePayed_title_pay">合并付款</string>
    <string name="order_nonePayed_item_payed">去付款</string>
    <string name="order_nonePayed_item_delete">取消订单</string>
    <string name="shopCar_content_footer_button">结算</string>
    <string name="shopCar_content_title_text">购物车</string>
    <string name="shopCar_content_title_edit">编辑</string>
    <string name="order_payed_item_express">查看物流</string>
    <string name="order_payed_title_text">已付款订单</string>
    <string name="order_noneValuate_item_valuate">评价</string>
    <string name="order_noneValuate_item_delete">删除</string>
    <string name="order_noneReceived_item_received">收货</string>
    <string name="order_noneReceived_title_text">待收货订单</string>

    <string name="login_modifypassword_link">修改密码</string>

    <string name="app_name">ShoppingMall</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_label_username">用户名</string>
    <string name="login_username_hint">sign username here</string>
    <string name="login_password_hint">sign passwprd here</string>
    <string name="login_label_password">密码</string>
    <string name="login_register_link">没有密码？在这里注册</string>
    <string name="login_label_signin">登录</string>

    <string name="goods_evaluation_string0">用户名</string>
    <string name="goods_evaluation_string1">商品质量很好，好评！</string>
    <string name="goods_evaluation_string2">尺寸</string>
    <string name="goods_evaluation_string3">颜色</string>
    <string name="goods_evaluation_string4">时间</string>

    <string name="shangpin">商品</string>
    <string name="xiangqing">详情</string>
    <string name="pingjia">评价</string>

    <string name="shijian">时间</string>
    <string name="didian">地点</string>

    <string name="info_oflogi">物流信息</string>
    <string name="num_oflogi">物流号</string>
    <string name="num_oford">订单号</string>

    <!--     goods_brief界面字符串常量 -->
    <string name="goods_brief_btn_goods">商 品</string>
    <string name="goods_brief_btn_detail">详 情</string>
    <string name="goods_brief_btn_comment">评 价</string>
    <string name="goods_brief_btn_addcar">加入购物车</string>
    <string name="goods_brief_btn_buy">立即购买</string>
    <string name="goods_brief_textv_goodsname">名 称:</string>
    <string name="goods_brief_textv_price">价 格:</string>
    <string name="goods_brief_textv_sales">销 量:</string>


    <!--     goods_detail界面字符串常量 -->
    <string name="goods_detail_textv_store">商 家:</string>
    <string name="goods_detail_textv_size">尺 寸:</string>
    <string name="goods_detail_textv_color">颜 色:</string>


    <!--     publish_evaluation界面字符串常量 -->
    <string name="publish_evaluation_textv_title">评 价</string>
    <string name="publish_evaluation_textv_level">亲，给5颗星吧!!</string>
    <string name="publish_evaluation_btn_publish">发表评价</string>


    <!-- account_balance界面里的标题按钮 -->
    <string name="account_balance_textv_title">钱 包</string>
    <string name="account_balance_textv_balance">余 额:</string>
    <string name="account_balance_btn_publish">充 值</string>
    <string name="account_balance_textv_loadmoney">充值金额:</string>
    <string name="account_balance_btn_doload">确认充值</string>


    <!-- purchase_confirm界面里的标题按钮 -->
    <string name="purchase_confirm_textv_title">立即购买</string>
    <string name="purchase_confirm_textv_price">价 格:</string>
    <string name="purchase_confirm_textv_save">库 存:</string>
    <string name="purchase_confirm_textv_size">尺 寸:</string>
    <string name="purchase_confirm_textv_color">颜 色:</string>
    <string name="purchase_confirm_textv_number">数 量:</string>


    <string name="purchase_confirm_textv_loadmoney">充值金额:</string>
    <string name="purchase_confirm_btn_doload">确认充值</string>



    <!-- 修改界面 -->

    <string name="password_modify_TextView_textold">原密码</string>
    <string name="password_modify_TextView_textnew">新密码</string>
    <string name="password_modify_TextView_textcheck">确认密码</string>
    <string name="password_modify_TextView_textmain">修改密码</string>
    <string name="password_modify_Button_text">确认</string>
    <!--     注册 界面-->
    <string name="register_TextView_textRegister">米米乐用户注册</string>
    <string name="register_TextView_textUsername">用户名</string>
    <string name="register_TextView_textpwd">密码</string>
    <string name="register_TextView_textcheck">确认密码</string>
    <string name="register_Button_text">立即注册</string>
    <!--     我界面 -->
    <string name="member_center_TextView_textusername">用户名</string>
    <string name="member_center_TextView_textlevel">等级</string>
    <string name="member_center_TextView_textMyOrder">我的订单</string>
    <string name="member_center_Button_textwaitToPay">待付款</string>
    <string name="member_center_Button_textAlreadyPay">待发货</string>
    <string name="member_center_Button_textWaitToGet">待收货</string>
    <string name="member_center_Button_textWaitToComment">待评价</string>
    <string name="member_center_TextView_textMyMoney">我的资产</string>
    <string name="member_center_Button_textbalance">余额</string>
    <string name="member_center_Button_textcoupon">优惠券</string>
    <string name="member_center_Button_textIntegration">积分</string>
    <string name="member_center_Button_textAddress">收货地址管理</string>

    <!--     设置界面 -->
    <string name="member_settings_TextView_textMainSet">设置</string>
    <string name="member_settings_TextView_textHeadPicture">头像</string>
    <string name="member_settings_TextView_textUserName">用户名</string>
    <string name="member_settings_TextView_textEmail">邮箱</string>
    <string name="member_settings_TextView_textPhone">电话</string>
    <string name="member_settings_EditText_textEMail">Please Input Your EMail</string>
    <string name="member_settings_EditText_textPhone">Please Input Your PhoneNumber</string>
    <string name="member_settings_Button_textAbout">关于</string>
    <string name="member_settings_Button_textExit">退出</string>
    <string name="member_settings_Button_textSave">保存</string>

    <!--     添加地址 界面-->
    <string name="add_address_TextView_textAddressManage">管理地址</string>
    <string name="add_address_TextView_textGetPerson">收货人</string>
    <string name="add_address_EditText_textGetPerson">Please Input something</string>
    <string name="add_address_Button_textSave">保存</string>
    <string name="add_address_TextView_textPhone">联系电话</string>
    <string name="add_address_EditText_textPhone">Please Input phone</string>
    <string name="add_address_TextView_textArea">所在地区</string>
    <string name="add_address_TextView_textDetailAddress">详细地址</string>
    <string name="add_address_EditText_textDetailAddress">在此写详细地址</string>

    <!-- 编辑地址 界面-->

    <string name="edit_address_TextView_textAddressManage">管理地址</string>
    <string name="edit_address_TextView_textGetPerson">收货人</string>
    <string name="edit_address_EditText_textGetPerson">Please Input something</string>
    <string name="edit_address_Button_textSave">保存</string>
    <string name="edit_address_TextView_textPhone">联系电话</string>
    <string name="edit_address_EditText_textPhone">Please Input phone</string>
    <string name="edit_address_TextView_textArea">所在地区</string>
    <string name="edit_address_TextView_textDetailAddress">详细地址</string>
    <string name="edit_address_EditText_textDetailAddress">在此写详细地址</string>


    <string-array name="sheng">
        <item>四川</item>
        <item>湖南</item>
    </string-array>

    <!--     任涛 -->
    <string name="pay_return">返回</string>
    <string name="pay_label_pay">支付</string>
    <string name="pay_label_pay_way">支付方式：</string>
    <string name="pay_label_need_remind">需付款：</string>
    <string name="pay_label_need_point">需积分:</string>
    <string name="pay_confirm_pay">确认支付</string>
    <string name="pay_remind">米米乐支付</string>
    <string name="pay_point">积分支付</string>

    <string name="order_detail_label_order">订单已生成，等待发货</string>
    <string name="order_detail_label_order_details">订单详情：</string>
    <string name="order_detail_label_order_number">订单号：</string>
    <string name="order_detail_label_order_time">订单生产时间：</string>
    <string name="order_detail_label_product_name">商品名：</string>
    <string name="order_detail_label_price_point">价格/积分：</string>

    <string name="order_detail_return">返回</string>

</resources>
